cmake_minimum_required(VERSION 3.16)
project(Cpp_Files)

set(CMAKE_CXX_STANDARD 14)

add_executable(palindromicPaths palindromicPaths.cpp)
add_executable(flyingCow flyingCow.cpp)
add_executable(paintJob paintJob.cpp)
add_executable(censoring censoring.cpp)
add_executable(farmOff farmOff.cpp)
add_executable(scrambledLetters scrambledLetters.cpp)
add_executable(cowJog cowJog.cpp)

add_executable(cardStacking-cheat cardStacking-cheat.cpp)
add_executable(typo typo.cpp)
add_executable(qsort qsort.cpp)
add_executable(baleShare baleShare.cpp)
add_executable(milkMeasurement milkMeasurement.cpp)
add_executable(lifegaurds lifegaurds.cpp)
add_executable(minesweeper minesweeper.cpp)
add_executable(laserPhones laserPhones.cpp)
add_executable(unblockingBlocks unblockingBlocks.cpp)
add_executable(wordMorph wordMorph.cpp)
add_executable(bronzeLilypad bronzeLilypad.cpp)
add_executable(cornMaze cornMaze.cpp)
add_executable(3dSpaceExploration 3dSpaceExploration.cpp)
add_executable(cowYahtzee cowYahtzee.cpp)
add_executable(theClocks theClocks.cpp)
add_executable(wrongDirections wrongDirections.cpp)
add_executable(backToTheBarn backToTheBarn.cpp)
add_executable(badGrass badGrass.cpp)
add_executable(wormholes wormholes.cpp)